workshop03/nwapp-ing_.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
   name: nwapp-ing 
   labels:
      app: northwind
   annotations:
      kunernetes.io/ingress.class: "nginx"
      nginx.ingress.kubernetes.io/rewrite-target: /$2

spec:
   rules:
   - host: "nwapp.167.172.6.181.nip.io"
     http:
        paths:
        - path: /v1(/|$)(.*)
          backend:
             serviceName: nwapp-svc
             servicePort: 8080             
        - path: /v2(/|$)(.*)
          backend:
             serviceName: nwapp-svc
             servicePort: 8080
